# yandex-practicum-solutions

./: CMakeLists.txt  README.md
sprint0/: CMakeLists.txt  d.cpp  e.cpp
sprint1/: A_func_value.cpp  CMakeLists.txt  C_neighbors.cpp  E_longest_word.cpp  F_palindrome.cpp  G_work_from_home.cpp  H_binary_system.cpp  I_power_of_four.cpp  J_factorization.cpp  L_extra_letter.cpp  README.md  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  final_B_sleight_hands.cpp  final_a.cpp  k.cpp
sprint2/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  final_a.cpp  final_b.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp
sprint3/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  final_a.cpp  final_b.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp
sprint4/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  final_a.cpp  final_b.cpp  g.cpp  h.cpp  i.cpp  input.txt  k.cpp  l.cpp
sprint5/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  final_a.cpp  final_b.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp
sprint6/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  final_a.cpp  final_b.cpp  g.cpp  h.cpp  j.cpp  l.cpp
sprint7/: CMakeLists.txt  a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  final_a.cpp  final_b.cpp  g.cpp
sprint8/: CMakeLists.txt  a.cpp  b.cpp  e.cpp  final_a.cpp  final_b.cpp  g.cpp  k.cpp  l.cpp  test.cpp
