cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions)

add_subdirectory(sprint0)
add_subdirectory(sprint1)
add_subdirectory(sprint2)
add_subdirectory(sprint3)
add_subdirectory(sprint4)
add_subdirectory(sprint5)
add_subdirectory(sprint6)
add_subdirectory(sprint7)
add_subdirectory(sprint8)

set(CMAKE_CXX_STANDARD 20)
