cmake_minimum_required(VERSION 3.22)
project(sprint1)

set(CMAKE_CXX_STANDARD 20)

add_executable(1_A_func_value A_func_value.cpp)
add_executable(1_B_odd_even B_odd_even.cpp)
add_executable(1_C_neighbors C_neighbors.cpp)
add_executable(1_D_weather_randomness D_weather_randomness.cpp)
add_executable(1_E_longest_word E_longest_word.cpp)
add_executable(1_F_palindrome F_palindrome.cpp)
add_executable(1_G_work_from_home G_work_from_home.cpp)
add_executable(1_H_binary_system H_binary_system.cpp)
add_executable(1_I_power_of_four I_power_of_four.cpp)
add_executable(1_J_factorization J_factorization.cpp)
add_executable(1_K_list_form K_list_form.cpp)
add_executable(1_L_extra_letter L_extra_letter.cpp)
add_executable(1_final_A_nearest_zero final_A_nearest_zero.cpp)
add_executable(1_final_B_sleight_hands final_B_sleight_hands.cpp)