cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions_sprint1)

set(CMAKE_CXX_STANDARD 20)

add_executable(sprint2_a a.cpp)
add_executable(sprint2_b b.cpp)
add_executable(sprint2_c c.cpp)
add_executable(sprint2_d d.cpp)
add_executable(sprint2_e e.cpp)
add_executable(sprint2_f f.cpp)
add_executable(sprint2_g g.cpp)
add_executable(sprint2_h h.cpp)
add_executable(sprint2_i i.cpp)
add_executable(sprint2_j j.cpp)
add_executable(sprint2_k k.cpp)
add_executable(sprint2_l l.cpp)
add_executable(sprint2_final_a final_a.cpp)
add_executable(sprint2_final_b final_b.cpp)
