cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions_sprint4)

set(CMAKE_CXX_STANDARD 20)

add_executable(sprint4_a a.cpp)
add_executable(sprint4_b b.cpp)
add_executable(sprint4_c c.cpp)
add_executable(sprint4_d d.cpp)
add_executable(sprint4_e e.cpp)
add_executable(sprint4_f f.cpp)
add_executable(sprint4_g g.cpp)
add_executable(sprint4_h h.cpp)
add_executable(sprint4_i i.cpp)
#add_executable(sprint3_j j.cpp)
add_executable(sprint4_k k.cpp)
add_executable(sprint4_l l.cpp)
add_executable(sprint4_final_a final_a.cpp)
#add_executable(sprint3_final_b final_b.cpp)
