cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions_sprint5)

set(CMAKE_CXX_STANDARD 20)

add_executable(sprint5_a a.cpp)
add_executable(sprint5_b b.cpp)
add_executable(sprint5_c c.cpp)
add_executable(sprint5_d d.cpp)
add_executable(sprint5_e e.cpp)
add_executable(sprint5_f f.cpp)
add_executable(sprint5_g g.cpp)
add_executable(sprint5_h h.cpp)
add_executable(sprint5_i i.cpp)
add_executable(sprint5_j j.cpp)
add_executable(sprint5_k k.cpp)
add_executable(sprint5_l l.cpp)
add_executable(sprint5_m m.cpp)
add_executable(sprint5_n n.cpp)
add_executable(sprint5_final_a final_a.cpp)
add_executable(sprint5_final_b final_b.cpp)
