cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions_sprint6)

set(CMAKE_CXX_STANDARD 20)

add_executable(sprint6_a a.cpp)
add_executable(sprint6_b b.cpp)
add_executable(sprint6_c c.cpp)
add_executable(sprint6_d d.cpp)
add_executable(sprint6_e e.cpp)
add_executable(sprint6_f f.cpp)
add_executable(sprint6_g g.cpp)
add_executable(sprint6_h h.cpp)
add_executable(sprint6_j j.cpp)
#add_executable(sprint6_k k.cpp)
add_executable(sprint6_l l.cpp)
#add_executable(sprint6_m m.cpp)
add_executable(sprint6_final_a final_a.cpp)
add_executable(sprint6_final_b final_b.cpp)
