cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions_sprint7)

set(CMAKE_CXX_STANDARD 20)

add_executable(sprint7_a a.cpp)
add_executable(sprint7_b b.cpp)
add_executable(sprint7_c c.cpp)
add_executable(sprint7_d d.cpp)
add_executable(sprint7_e e.cpp)
#add_executable(sprint7_f f.cpp)
add_executable(sprint7_g g.cpp)
#add_executable(sprint7_h h.cpp)
#add_executable(sprint7_j j.cpp)
##add_executable(sprint7_k k.cpp)
#add_executable(sprint7_l l.cpp)
##add_executable(sprint7_m m.cpp)
add_executable(sprint7_final_a final_a.cpp)
add_executable(sprint7_final_b final_b.cpp)
