cmake_minimum_required(VERSION 3.22)
project(yandex_practicum_solutions_sprint8)

set(CMAKE_CXX_STANDARD 20)

add_executable(sprint8_a a.cpp)
add_executable(sprint8_b b.cpp)
#add_executable(sprint8_c c.cpp)
#add_executable(sprint8_d d.cpp)
add_executable(sprint8_e e.cpp)
#add_executable(sprint8_f f.cpp)
add_executable(sprint8_g g.cpp)
#add_executable(sprint8_h h.cpp)
#add_executable(sprint8_j j.cpp)
add_executable(sprint8_k k.cpp)
add_executable(sprint8_l l.cpp)
add_executable(sprint8_test test.cpp)
##add_executable(sprint8_m m.cpp)
add_executable(sprint8_final_a final_a.cpp)
add_executable(sprint8_final_b final_b.cpp)
